# aoc

./: LICENSE  README.md  TOC.md  info.md  readme.py  toc.py
aoc2016/: day01.ts  day03.ts  day04_.ts  day05.ts  day06.ts  day07.ts  day08.ts  day08_.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day13_.ts  deno.json  lib.ts
aoc2016/lib/: array.ts  deno_nb.ts  grid.ts  index.ts  math.ts  misc.ts  object.ts  string.ts  vector.ts
aoc2021/app/: Day04.hs  Day05.hs  Day12.hs  Day15.hs  Day22.hs
aoc2021/data/: day_23_input
aoc2021/lyah/: parsers101.hs
aoc2022/: index.ts  package-lock.json
aoc2022/src/: day02.ts  day04.ts  day06.ts  day07.ts  day10.ts  day11.ts  day13.ts  day14.ts  toolbelt.ts
aoc2023/: package-lock.json  package.json
aoc2023/src/: day01.js  day02.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day13.js  day14.js  day15.js  day16.js  day17.js  day18.js  day19.js  day20.js  day21.js  day22.js  day24.js  day25.js  img.js  utils.js
aoc2024/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  deno.json
aoc2024/lib/: array.ts  astar.ts  common.ts  grid.ts  index.ts  map.ts  math.ts  misc.ts  (+3 more)
haoc2021/: haoc2021.cabal  lyah.hs
haoc2021/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Tools.hs
haoc2021/lyah/: helloworld.hs  intro.hs
haskell/: README.md
js-node/: README.md
ts-deno/: README.md  deno.json
ts-node/: README.md
(+87 files in other folders)
