cabal-version:      2.4
name:               haoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Jurczyk
maintainer:         ajur.pl@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common deps
  build-depends:      base ^>=4.14.3.0,
                      split,
                      containers,
                      matrix,
                      vector
  other-modules:      Tools
  hs-source-dirs:     app
  default-language:   Haskell2010

executable haoc2021
    import:           deps
    main-is:          Main.hs

executable day1
    import:           deps
    main-is:          Day01.hs

executable day2
    import:           deps
    main-is:          Day02.hs

executable day3
    import:           deps
    main-is:          Day03.hs

executable day4
    import:           deps
    main-is:          Day04.hs

executable day5
    import:           deps
    main-is:          Day05.hs

executable day6
    import:           deps
    main-is:          Day06.hs

executable day7
    import:           deps
    main-is:          Day07.hs

executable day8
    import:           deps
    main-is:          Day08.hs

executable day9
    import:           deps
    main-is:          Day09.hs

executable day10
    import:           deps
    main-is:          Day10.hs